[package]
name = "check-project"
version = "0.1.0"
edition = "2018"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhilboBaggins/check-project"

[dependencies]
clap = "2.33.0"
cargo_toml = "0.8.0"
rust-ini = "0.13.0"
toml = "0.5.5"

[dev-dependencies]
cargo-husky = "1"
